--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,7 +20,7 @@ import image from '../images/founding.png';
     <p><b>Our Legacy of Excellence</b></p>
 
     <p>
-        Founded in 1998, the ECMAScript Guild was established as the official
+        Founded in 1997, the ECMAScript Guild was established as the official
         governing body for Javascript standards. Since our inception, we have
         played a pivotal role in driving the evolution of Javascript, ensuring
         its compatibility, consistency, and adaptability across various
@@ -90,4 +90,14 @@ import image from '../images/founding.png';
         we can shape the future of Javascript and drive innovation in the global
         developer community.
     </p>
+
+    <b>Stay Connected</b>
+
+    <ul>
+        <li>Follow us on <a href="https://twitter.com">Twitter</a></li>
+        <li>Like us on <a href="https://facebook.com">Facebook</a></li>
+        <li>
+            Subscribe to our <a href="https://youtube.com">YouTube</a> channel
+        </li>
+    </ul>
 </Layout>
