--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,9 +8,9 @@ import { SITE_TITLE } from '../consts';
         {SITE_TITLE}
     </h2>
     <nav>
-        <HeaderLink href="/">Home</HeaderLink>
-        <HeaderLink href="/blog">Blog</HeaderLink>
-        <HeaderLink href="/about">About</HeaderLink>
+        <HeaderLink href="/standards/">Home</HeaderLink>
+        <HeaderLink href="/standards/blog">Blog</HeaderLink>
+        <HeaderLink href="/standards/about">About</HeaderLink>
     </nav>
 </header>
 <style>
