--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -42,7 +42,7 @@ const posts = (await getCollection('blog')).sort(
                         posts.map((post) => (
                             <li>
                                 <FormattedDate date={post.data.pubDate} />
-                                <a href={`/standards/blog/${post.slug}/`}>
+                                <a href={`/blog/${post.slug}/`}>
                                     {post.data.title}
                                 </a>
                             </li>
